--- a/Ubiquitous2/Properties/Resources.resx
+++ b/Ubiquitous2/Properties/Resources.resx
@@ -145,4 +145,7 @@
   <data name="lastfm" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lastfm.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="webserver" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\webserver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
