--- a/Ubiquitous2/Properties/Resources.resx
+++ b/Ubiquitous2/Properties/Resources.resx
@@ -154,4 +154,7 @@
   <data name="gaminglivedark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gaminglivedark.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="hitbox" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hitbox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
