--- a/Ubiquitous2/Properties/Resources.resx
+++ b/Ubiquitous2/Properties/Resources.resx
@@ -157,4 +157,7 @@
   <data name="hitbox" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hitbox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ubiheadset" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ubiheadset.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
