--- a/Ubiquitous2/Properties/Resources.resx
+++ b/Ubiquitous2/Properties/Resources.resx
@@ -184,4 +184,7 @@
   <data name="twitch_large" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\twitch_large.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="obs" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\obs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
