--- a/Ubiquitous2/Properties/Resources.resx
+++ b/Ubiquitous2/Properties/Resources.resx
@@ -190,4 +190,7 @@
   <data name="goodgame16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\goodgame16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="cybergame" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cybergame.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
