--- a/Ubiquitous2/Properties/Resources.resx
+++ b/Ubiquitous2/Properties/Resources.resx
@@ -193,4 +193,7 @@
   <data name="cybergame" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cybergame.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="StarCitizenThemeThumbnail" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StarCitizenThemeThumbnail.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
