--- a/Ubiquitous2/Properties/Resources.resx
+++ b/Ubiquitous2/Properties/Resources.resx
@@ -199,4 +199,7 @@
   <data name="BattlefieldThemeThumbnail" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BattlefieldThemeThumbnail.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="youtube" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\youtube.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
